Рефакторинг, новый раздел

--- a/404.html
+++ b/404.html
@@ -49,14 +49,14 @@
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="/index.html">Главная</a>
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
-            <a class="mdl-navigation__link" href="/topics/architectural.html">Архитектурный Нижний</a>
-            <a class="mdl-navigation__link" href="/topics/literary.html">Литературный Нижний</a>
-            <a class="mdl-navigation__link" href="/topics/theatrical.html">Театральный Нижний</a>
-            <a class="mdl-navigation__link" href="/topics/industrial.html">Промышленный Нижний</a>
-            <a class="mdl-navigation__link" href="/topics/victorious.html">Победный Нижний</a>
-            <a class="mdl-navigation__link" href="/topics/musical.html">Музыкальный Нижний</a>
-            <a class="mdl-navigation__link" href="/topics/orthodoxic.html">Православный Нижний</a>
-            <a class="mdl-navigation__link" href="/topics/honorary_citizens.html">Почетные граждане</a>
+            <a class="mdl-navigation__link" href="/stands/architectural.html">Архитектурный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/literary.html">Литературный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/theatrical.html">Театральный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/industrial.html">Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/victorious.html">Победный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/musical.html">Музыкальный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/orthodoxic.html">Православный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/honorary_citizens.html">Почетные граждане</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
