--- a/stands/architectural.html
+++ b/stands/architectural.html
@@ -7,7 +7,7 @@
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
-    <script>var topicName='Архитектурный Нижний';var topicId='architectural'</script>
+    <script>var topicName='Архитектурный Нижний';var topicCategory='stand';var topicId='architectural'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
     <link rel="stylesheet" href="../css/topic.css">
@@ -32,6 +32,17 @@
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
             <span id="navigation-table_of_contents"></span>
+
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Столетия:</a>
+            <a class="mdl-navigation__link" href="../centuries/xiii.html">XIII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xiv.html">XIV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xv.html">XV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvi.html">XVI век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvii.html">XVII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xviii.html">XVIII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xix.html">XIX век</a>
+            <a class="mdl-navigation__link" href="../centuries/xx.html">XX век</a>
+
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
             <a class="mdl-navigation__link mdl-navigation-current-topic">Архитектурный Нижний</a>
             <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
