--- a/stands/orthodoxic.html
+++ b/stands/orthodoxic.html
@@ -7,11 +7,11 @@
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
-    <script>var topicName='Литературный Нижний';var topicId='literary'</script>
+    <script>var topicName='Православный Нижний';var topicCategory='stand';var topicId='orthodoxic'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
     <link rel="stylesheet" href="../css/topic.css">
-    <title>Литературный Нижний - Исторический зал</title>
+    <title>Православный Нижний - Исторический зал</title>
 </head>
 <body>
 
@@ -32,14 +32,25 @@
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
             <span id="navigation-table_of_contents"></span>
+
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Столетия:</a>
+            <a class="mdl-navigation__link" href="../centuries/xiii.html">XIII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xiv.html">XIV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xv.html">XV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvi.html">XVI век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvii.html">XVII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xviii.html">XVIII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xix.html">XIX век</a>
+            <a class="mdl-navigation__link" href="../centuries/xx.html">XX век</a>
+
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
             <a class="mdl-navigation__link" href="architectural.html">Архитектурный Нижний</a>
-            <a class="mdl-navigation__link mdl-navigation-current-topic">Литературный Нижний</a>
+            <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
             <a class="mdl-navigation__link" href="theatrical.html">Театральный Нижний</a>
             <a class="mdl-navigation__link" href="industrial.html">Промышленный Нижний</a>
             <a class="mdl-navigation__link" href="victorious.html">Победный Нижний</a>
             <a class="mdl-navigation__link" href="musical.html">Музыкальный Нижний</a>
-            <a class="mdl-navigation__link" href="orthodoxic.html">Православный Нижний</a>
+            <a class="mdl-navigation__link mdl-navigation-current-topic">Православный Нижний</a>
             <a class="mdl-navigation__link" href="honorary_citizens.html">Почетные граждане</a>
         </nav>
     </div>
@@ -49,17 +60,8 @@
             <div class="content" id="topic_content">
                 <p class="introduction">Введение</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="boldino_autmn" data-chapter="Болдинская осень А.С. Пушкина">
-                    <p>Александр Сергеевич Пушкин по праву считается величайшим русским поэтом. За свою жизнь он написал более 800 произведений разных жанров, однако самая плодотворные его дни прошли в Нижнем Новгороде.</p>
-                    <img data-label="Усадьба Пушкина в Болдино"/>
-                    <p>В 1830 году, наа своей усадьбе в Большом Болдино, к поэту пришло вдохновение и он с невероятной быстротой создавал одно произведение за другим. Здесь он написал более 30 произведений, включая "Повести Белкина" и конец "Евгения Онегина". Пушкин пробует новые для себя жанры, но, к сожалению, не все из задуманного он успел осуществить.</p>
-                    <p>Само словосочетание "Болдинская осень" стало крылатым выражением и означает саму продуктивную пору в жизни человека, расцвет его сил и творческий подъем.</p>
-                </div>
-                <div class="chapter" id="maxim_gorky" data-chapter="Максим Горький">
-                    <p>Максим Горький <i>(настоящее имя - Алексей Максимович Пешков)</i> - нижегородский и самый издаваемый в СССР писатель.</p>
-                    <img data-label="1900 год"/>
-                    <p>Он был основоположником литературы социалистического реализма и первым рукводителем Союза писателей СССР, являясь одним из самых значительных и известных в мире русских писателей и мыслителей.</p>
-                    <p>Какое-то время быв крупнейшим спонсором большевиков, скептически относился к октябрьской революции и советской власти на начальных порах. В его честь Нижний Новгород в 1932 году, незадолго до его смерти, был переименован в Горький. Историческое название вернулось к городу лишь в 1990 году.</p>
+                <div class="chapter" id="example" data-chapter="Пример главы">
+                    <p>Текст главы</p>
                 </div>
             </div>
         </div>
