--- a/index.html
+++ b/index.html
@@ -30,89 +30,170 @@
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link mdl-navigation-current-topic">Главная</a>
+
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Столетия:</a>
+            <a class="mdl-navigation__link" href="centuries/xiii.html">XIII век</a>
+            <a class="mdl-navigation__link" href="centuries/xiv.html">XIV век</a>
+            <a class="mdl-navigation__link" href="centuries/xv.html">XV век</a>
+            <a class="mdl-navigation__link" href="centuries/xvi.html">XVI век</a>
+            <a class="mdl-navigation__link" href="centuries/xvii.html">XVII век</a>
+            <a class="mdl-navigation__link" href="centuries/xviii.html">XVIII век</a>
+            <a class="mdl-navigation__link" href="centuries/xix.html">XIX век</a>
+            <a class="mdl-navigation__link" href="centuries/xx.html">XX век</a>
+
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
-            <a class="mdl-navigation__link" href="topics/architectural.html">Архитектурный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/literary.html">Литературный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/theatrical.html">Театральный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/industrial.html">Промышленный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/victorious.html">Победный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/musical.html">Музыкальный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/orthodoxic.html">Православный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/honorary_citizens.html">Почетные граждане</a>
+            <a class="mdl-navigation__link" href="stands/architectural.html">Архитектурный Нижний</a>
+            <a class="mdl-navigation__link" href="stands/literary.html">Литературный Нижний</a>
+            <a class="mdl-navigation__link" href="stands/theatrical.html">Театральный Нижний</a>
+            <a class="mdl-navigation__link" href="stands/industrial.html">Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="stands/victorious.html">Победный Нижний</a>
+            <a class="mdl-navigation__link" href="stands/musical.html">Музыкальный Нижний</a>
+            <a class="mdl-navigation__link" href="stands/orthodoxic.html">Православный Нижний</a>
+            <a class="mdl-navigation__link" href="stands/honorary_citizens.html">Почетные граждане</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
             <br><br><br>
             <h3>Приветствуем Вас в Историческом зале</h3>
-            <h4>Выберите стенд:</h4>
-            <div id="view_container">
+
+            <h4>Столетия Нижнего Новгорода:</h4>
+            <div class="view_container">
                 <div class="view">
-                    <img alt="Архитектурный Нижний" src="img/cards/architecture.jpg" />
+                    <img alt="XIII век" src="img/cards/centuries/xiii.jpg" />
+                    <div class="mask" style="background-color: rgba(229, 177, 81, 0.75)">
+                        <h2 style="color: #ff5700">XIII век</h2>
+                        <p>Основание города и монгольское нашествие на Русь</p>
+                        <a href="centuries/xiii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #ff6900; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XIV век" src="img/cards/centuries/xiv.jpg" />
+                    <div class="mask" style="background-color: rgba(93, 132, 63, 0.78)">
+                        <h2 style="color: #a8db9f">XIV век</h2>
+                        <p>Вместе с Москвой против орды</p>
+                        <a href="centuries/xiv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XV век" src="img/cards/centuries/xv.jpg" />
+                    <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
+                        <h2 style="color: lightgreen">XV век</h2>
+                        <p>В составе Московского государства</p>
+                        <a href="centuries/xv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XVI век" src="img/cards/centuries/xvi.jpg" />
+                    <div class="mask" style="background-color: rgba(100, 76, 37, 0.73)">
+                        <h2 style="color: orange">XVI век</h2>
+                        <p>Информация о почетных гражданах нашего города</p>
+                        <a href="centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: orange; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XVII век" src="img/cards/centuries/xvii.jpg" />
+                    <div class="mask" style="background-color: rgba(186, 186, 202, 0.78)">
+                        <h2 style="color: black">XVII век</h2>
+                        <p>Смутное время, церковный раскол и восстание Степана Разина</p>
+                        <a href="centuries/xvii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #51504fd9; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XVIII век" src="img/cards/centuries/xviii.jpg" />
+                    <div class="mask" style="background-color: rgba(78, 155, 113, 0.69)">
+                        <h2 style="color: #7aee90">XVIII век</h2>
+                        <p>Нижний Новгород в эпоху петровских реформ</p>
+                        <a href="centuries/xviii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XIII век" src="img/cards/centuries/xix.jpg" />
+                    <div class="mask" style="background-color: rgba(46, 216, 208, 0.75)">
+                        <h2 style="color: #d5feff">XIX век</h2>
+                        <p>Нижегородская ярмарка и Всероссийская выставка</p>
+                        <a href="centuries/xiii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #3be0e6; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XX век" src="img/cards/centuries/xx.jpg" />
+                    <div class="mask" style="background-color: rgba(156, 180, 230, 0.53)">
+                        <h2 style="color: #5357e2">XX век</h2>
+                        <p>Революция, переименование, война и возвращение исторического названия</p>
+                        <a href="centuries/xx.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #8f92f2; color: white">Перейти</a>
+                    </div>
+                </div>
+            </div>
+
+            <h4>Стенды:</h4>
+            <div class="view_container">
+                <div class="view">
+                    <img alt="Архитектурный Нижний" src="img/cards/stands/architecture.jpg" />
                     <div class="mask" style="background-color: rgba(132,7,0,0.6)">
                         <h2 style="color: #eac4c4">Архитектурный Нижний</h2>
                         <p>Достопримечательности и история архитектуры Нижнего Новгорода</p>
-                        <a href="topics/architectural.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: indianred; color: white">Перейти</a>
+                        <a href="stands/architectural.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: indianred; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Литературный Нижний" src="img/cards/literature.jpg" />
+                    <img alt="Литературный Нижний" src="img/cards/stands/literature.jpg" />
                     <div class="mask" style="background-color: rgba(129,132,63,0.78)">
                         <h2 style="color: #a8db9f">Литературный Нижний</h2>
                         <p>Интересная информация о нижегородской литературе</p>
-                        <a href="topics/literary.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
+                        <a href="stands/literary.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Театральный Нижний" src="img/cards/theatre.jpg" />
+                    <img alt="Театральный Нижний" src="img/cards/stands/theatre.jpg" />
                     <div class="mask" style="background-color: rgba(142,188,209,0.78)">
                         <h2 style="color: #004889d6">Театральный Нижний</h2>
                         <p>Интересная информация о нижегородских театрах</p>
-                        <a href="topics/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
+                        <a href="stands/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Промышленный Нижний" src="img/cards/industry.jpg" />
+                    <img alt="Промышленный Нижний" src="img/cards/stands/industry.jpg" />
                     <div class="mask" style="background-color: rgba(132,69,22,0.73)">
                         <h2 style="color: #ffe400d6">Промышленный Нижний</h2>
                         <p>Интересная информация о нижегородской промышленности</p>
-                        <a href="topics/industrial.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: darkorange; color: white">Перейти</a>
+                        <a href="stands/industrial.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: darkorange; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Победный Нижний" src="img/cards/victory.jpg" />
+                    <img alt="Победный Нижний" src="img/cards/stands/victory.jpg" />
                     <div class="mask" style="background-color: rgba(25,132,74,0.73)">
                         <h2 style="color: #7aee90">Победный Нижний</h2>
                         <p>Вклад нижегородцев в победе в Великой Отечественной войне</p>
-                        <a href="topics/victorious.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: forestgreen; color: white">Перейти</a>
+                        <a href="stands/victorious.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: forestgreen; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Музыкальный Нижний" src="img/cards/music.jpg" />
+                    <img alt="Музыкальный Нижний" src="img/cards/stands/music.jpg" />
                     <div class="mask" style="background-color: rgba(111,115,132,0.73)">
                         <h2>Музыкальный Нижний</h2>
                         <p>Интересная информация о нижегородской музыке</p>
-                        <a href="topics/musical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="stands/musical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Православный Нижний" src="img/cards/orthodoxy.jpg" />
+                    <img alt="Православный Нижний" src="img/cards/stands/orthodoxy.jpg" />
                     <div class="mask" style="background-color: rgba(132,115,46,0.73)">
                         <h2 style="color: orange">Православный Нижний</h2>
                         <p>О православии в Нижнем Новгороде</p>
-                        <a href="topics/orthodoxic.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #e2a91f; color: black">Перейти</a>
+                        <a href="stands/orthodoxic.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #e2a91f; color: black">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Почетные граждане" src="img/cards/honorary_citizens.jpg" />
+                    <img alt="Почетные граждане" src="img/cards/stands/honorary_citizens.jpg" />
                     <div class="mask" style="background-color: rgba(132,5,61,0.73)">
                         <h2 style="color: orangered">Почетные граждане</h2>
                         <p>Информация о почетных гражданах нашего города</p>
-                        <a href="topics/honorary_citizens.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #f45656; color: black">Перейти</a>
+                        <a href="stands/honorary_citizens.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #f45656; color: black">Перейти</a>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer__left-section">
                 <img class="mdl-logo mini-logo" src="img/coat_of_arms.png" alt="Герб Нижегородской области">
