--- a/stands/musical.html
+++ b/stands/musical.html
@@ -7,11 +7,11 @@
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
-    <script>var topicName='Промышленный Нижний';var topicId='industrial'</script>
+    <script>var topicName='Музыкальный Нижний';var topicCategory='stand';var topicId='musical'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
     <link rel="stylesheet" href="../css/topic.css">
-    <title>Промышленный Нижний - Исторический зал</title>
+    <title>Музыкальный Нижний - Исторический зал</title>
 </head>
 <body>
 
@@ -32,13 +32,24 @@
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
             <span id="navigation-table_of_contents"></span>
+
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Столетия:</a>
+            <a class="mdl-navigation__link" href="../centuries/xiii.html">XIII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xiv.html">XIV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xv.html">XV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvi.html">XVI век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvii.html">XVII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xviii.html">XVIII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xix.html">XIX век</a>
+            <a class="mdl-navigation__link" href="../centuries/xx.html">XX век</a>
+
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
             <a class="mdl-navigation__link" href="architectural.html">Архитектурный Нижний</a>
             <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
             <a class="mdl-navigation__link" href="theatrical.html">Театральный Нижний</a>
-            <a class="mdl-navigation__link mdl-navigation-current-topic">Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="industrial.html">Промышленный Нижний</a>
             <a class="mdl-navigation__link" href="victorious.html">Победный Нижний</a>
-            <a class="mdl-navigation__link" href="musical.html">Музыкальный Нижний</a>
+            <a class="mdl-navigation__link mdl-navigation-current-topic">Музыкальный Нижний</a>
             <a class="mdl-navigation__link" href="orthodoxic.html">Православный Нижний</a>
             <a class="mdl-navigation__link" href="honorary_citizens.html">Почетные граждане</a>
         </nav>
