--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="mask" style="background-color: rgba(46, 216, 208, 0.75)">
                         <h2 style="color: #d5feff">XIX век</h2>
                         <p>Нижегородская ярмарка и Всероссийская выставка</p>
-                        <a href="centuries/xiii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #3be0e6; color: white">Перейти</a>
+                        <a href="centuries/xix.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #3be0e6; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
