--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
                 </div>
                 <div class="view">
                     <img alt="XVI век" src="img/cards/centuries/xvi.jpg" />
-                    <div class="mask" style="background-color: rgba(100, 76, 37, 0.73)">
-                        <h2 style="color: orange">XVI век</h2>
-                        <p>Информация о почетных гражданах нашего города</p>
-                        <a href="centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: orange; color: black">Перейти</a>
+                    <div class="mask" style="background-color: rgba(186, 186, 202, 0.78)">
+                        <h2 style="color: black">XVI век</h2>
+                        <p>Нижний Новгород - пограничный мост России</p>
+                        <a href="centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #51504fd9; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
                     <img alt="XVII век" src="img/cards/centuries/xvii.jpg" />
-                    <div class="mask" style="background-color: rgba(186, 186, 202, 0.78)">
-                        <h2 style="color: black">XVII век</h2>
+                    <div class="mask" style="background-color: rgba(100, 76, 37, 0.73)">
+                        <h2 style="color: orange">XVII век</h2>
                         <p>Смутное время, церковный раскол и восстание Степана Разина</p>
-                        <a href="centuries/xvii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #51504fd9; color: white">Перейти</a>
+                        <a href="centuries/xvii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: orange; color: black">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
