--- a/centuries/xiii.html
+++ b/centuries/xiii.html
@@ -58,11 +58,29 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">История Нижнего Новгорода восходит к 1220 году, когда Великий Князь Юрий Всеволодович после удачного похода на булгар решает основать в устье Оки "новый город".</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="foundation" data-chapter="Основание Нижнего Новгорода">
+                    <p>При военных походах на Волжскую Булгарию русские князья нашли удобное место в устье Оки и использовали его как место сбора для войск. В 1220 году Великий Князь Юрий Всеволодович провел удачный поход на булгар и решил закрепить это место за Русью, основав на нем в 1221 году «новый город» - Нижний Новгород.</p>
+                    <img data-label="Памятный камень в честь основания Нижнего Новгорода"/>
+                    <p>Первая деревянно-земляная крепость занимала чрезвычайно выгодное военно-стратегическое положение на Часовой горе. Была хорошо защищена с одной стороны глубоким оврагом, с другой — крутыми обрывами-осыпями волжского берега. В первые годы в крепости были построены два белокаменных храма, в том числе Архангельский собор в 1227 году.</p>
+                    <img data-label="Михайло-Архангельский собор. Наши дни"/>
                 </div>
+                <div class="chapter" id="affiliation" data-chapter="Принадлежность">
+                    <p>Русь находилась в раздробленном состоянии в начале тысячелетия. После основания Нижний Новгород входил в состав Владимиро-Суздальской Руси, затем на короткий отрезок времени в Нижем Новгороде была установлена "вечевая республика" по типу Великого Новгорода – форма политического устройства, при которой вопросы обсуждаются на народном собрании – вече.</p>
+                    <img data-label="Новгородское вече"/>
+                    <p>В последней трети XIII века из состава Суздальского княжества, частью которого являлся Нижний Новгород, выделилось недолго просуществовавшее Городецкое княжество.</p>
+                    <p>Сведений о Нижнем Новгороде первой половины тысячелетия крайне мало</p>
+                </div>
+                <br>
+                <div class="century-navigation">
+                    <a href="xiv.html">
+                        <i class="material-icons">arrow_right_alt</i>
+                        <br>
+                        XIV век
+                    </a>
+                </div>
+                <br>
             </div>
         </div>
         <footer class="mdl-mini-footer">
