Редизайн, оптимизация стилей

--- a/centuries/xiii.html
+++ b/centuries/xiii.html
@@ -73,11 +73,11 @@
                     <p>Сведений о Нижнем Новгороде первой половины тысячелетия крайне мало</p>
                 </div>
                 <br>
-                <div class="century-navigation">
-                    <a href="xiv.html">
-                        <i class="material-icons">arrow_right_alt</i>
-                        <br>
-                        XIV век
+                <div id="century-navigation">
+                    <b>Хронология:</b>
+                    <br>
+                    <a href="xiv.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                        XIV век <i class="material-icons">arrow_forward</i>
                     </a>
                 </div>
                 <br>
