--- a/centuries/xviii.html
+++ b/centuries/xviii.html
@@ -63,6 +63,18 @@
                 <div class="chapter" id="example" data-chapter="Пример главы">
                     <p>Текст главы</p>
                 </div>
+                <br>
+                <div id="century-navigation">
+                    <b>Хронология:</b>
+                    <br>
+                    <a href="xvii.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                        <i class="material-icons">arrow_back</i> XVII век
+                    </a>
+                    <a href="xix.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                        XIX век <i class="material-icons">arrow_forward</i>
+                    </a>
+                </div>
+                <br>
             </div>
         </div>
         <footer class="mdl-mini-footer">
