--- a/centuries/xiv.html
+++ b/centuries/xiv.html
@@ -58,10 +58,18 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">К XIV веку Русь оказалась в зависимости от Золотой Орды. Князьям требовалось получать из рук ордынцев ярлык на княжение. В гораздо более выгодном положении по сравнению с остальными русскими княжествами оказалась Москва – московский князь Иван Калита (1322 — 1340), заручившись поддержкой орды, начинает процесс объединения Руси.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="confrontation" data-chapter="Междоусобица владимирсого и московского князя">
+                    <p>В 1311 году шла борьба за великокняжеский трон между владимирским и московским князьями. Московский князь Юрий Даниилович завоевал Нижний Новгород у владимирского князя Михаила Ярославича, где посадил на княжение своего брата Бориса Даниловича. После его смерти, на короткий период времени, город вновь оказался в составе Владимирского княжества. Тверской князь Александр Михайлович поддержал восстание против ордынцев в Твери, из-за чего хан Узбек призвал московского князя Ивана Калиту разорить Тверское княжество. К ним присоединился суздальский князь Александр Васильевич. После победы хан Узбек разделил великокняжеские владения, часть отдав большую часть московскому князю. Часть земель, включая бывшее Городецкое княжество, досталась Суздальскому княжеству.</p>
+                    <p>После смерти суздальского князя в 1331 году земли перешли великому князю московскому Ивану Калите, который управлял им при помощи наместников.</p>
+                </div>
+                <div class="chapter" id="principality" data-chapter="Нижегородско-Суздальское Великое княжество (1341—1392)">
+                    <p>В 1341 Иван Калита умер, после чего хан Узбек разделил основные территории Северо-Восточной Руси. Часть, включавшая Нижний Новгород, Городец и Унжу, перешла во владение суздальского князя Константина Васильевича, в результате чего образовалось самостоятельное Нижегородско-Суздальское Великое княжество, границы которого проходили по рекам.</p>
+                    <p>Основным опорным пунктом на востоке была крепость Курмыш, основанная в 1372 году. Вдоль границы стояли небольшие крепости-острожки, в которых жили пограничники. Остатки таких крепостей обнаружены по реке Пьяна в Бутурлинском и Сергачском районах. Расцвет княжества пришелся на 70-е годы.</p>
+                    <img data-label="Река Пьяна"/>
+                    <p>В 1377 году ордынцы напали на Нижний Новгород. В битве при реке Пьяна русское войско потерпело тяжёлое поражение. Суздальский князь остался без войск, и был вынужден отступить в Суздаль, а нижегородцы — в соседний Городец. 5 августа 1377 года ордынские войска вошли в Нижний Новгород и город был сожжён, а через год захвачен повторно.</p>
+                    <p>В 1392 году московский князь Василий I получил ярлык на Нижегородское княжество и захватил Нижний Новгород.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
