--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img alt="XIV век" src="img/cards/centuries/xiv.jpg" />
                     <div class="mask" style="background-color: rgba(93, 132, 63, 0.78)">
                         <h2 style="color: #a8db9f">XIV век</h2>
-                        <p>Вместе с Москвой против орды</p>
+                        <p>Борьба с Ордой и Нижегородско-Суздальское Великое княжество</p>
                         <a href="centuries/xiv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
                     </div>
                 </div>
