--- a/centuries/xv.html
+++ b/centuries/xv.html
@@ -58,10 +58,16 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">В 1380 году город вместе с Москвой выступил против Орды на Куликовской битве. Московский князь Василий I в 1392 году получил ярлык на Нижний Новгород и город был захвачен. Затем город был разграблен в 1399 году булгарскими и татарскими отрядами.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="situation" data-chapter="Положение Нижнего Новгорода на начало XV века">
+                    <p>В 1408 году город был опустошён во время вторжения темника Золотой Орды Едигея.</p>
+                    <p>В 1414 году присоединение Нижнего Новгорода к Москве было окончательно закреплено походом Великого князя Московского Юрия Дмитриевича. Князь "не сътвори зла ничтоже" его жителям, за что получил признание и уважение горожан.</p>
+                    <p>В 1445 году город был взят войсками казанского хана Улу-Мухаммеда.</p>
+                </div>
+                <div class="chapter" id="bridge" data-chapter="Пограничный мост">
+                    <p>При Великих князьях Московских Иване III и Василии III город играет роль пограничного поста, имеет постоянное войско и является местом сбора при походах на Казанское ханство.</p>
+                    <p>В 1508 году был заложен каменный кремль взамен деревянного и достроен в 1515 году.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
