--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <img alt="XV век" src="img/cards/centuries/xv.jpg" />
                     <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
                         <h2 style="color: lightgreen">XV век</h2>
-                        <p>В составе Московского государства</p>
+                        <p>Пограничный мост Московского государства</p>
                         <a href="centuries/xv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
                     </div>
                 </div>
