Спутанная карточка, дополнение

--- a/centuries/xv.html
+++ b/centuries/xv.html
@@ -61,8 +61,9 @@
                 <p class="introduction">В 1380 году город вместе с Москвой выступил против Орды на Куликовской битве. Московский князь Василий I в 1392 году получил ярлык на Нижний Новгород и город был захвачен. Затем город был разграблен в 1399 году булгарскими и татарскими отрядами.</p>
                 <div id="table_of_contents"></div>
                 <div class="chapter" id="situation" data-chapter="Положение Нижнего Новгорода на начало XV века">
-                    <p>В 1408 году город был опустошён во время вторжения темника Золотой Орды Едигея.</p>
+                    <p>В 1408 году город был опустошён во время вторжения ордынцев.</p>
                     <p>В 1414 году присоединение Нижнего Новгорода к Москве было окончательно закреплено походом Великого князя Московского Юрия Дмитриевича. Князь "не сътвори зла ничтоже" его жителям, за что получил признание и уважение горожан.</p>
+                    <p>В 1434 году заложен Свято-Троице-Макарьево-Желтоводский монастырь, в котором впоследствии будет обучаться патриарх Никон.</p>
                     <p>В 1445 году город был взят войсками казанского хана Улу-Мухаммеда.</p>
                 </div>
                 <div class="chapter" id="bridge" data-chapter="Пограничный мост">
