--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
                 </div>
                 <div class="view">
                     <img alt="XV век" src="img/cards/centuries/xv.jpg" />
-                    <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
-                        <h2 style="color: lightgreen">XV век</h2>
+                    <div class="mask" style="background-color: rgba(186, 186, 202, 0.78)">
+                        <h2 style="color: black">XV век</h2>
                         <p>Пограничный мост Московского государства</p>
-                        <a href="centuries/xv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
+                        <a href="centuries/xv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #51504fd9; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
                     <img alt="XVI век" src="img/cards/centuries/xvi.jpg" />
-                    <div class="mask" style="background-color: rgba(186, 186, 202, 0.78)">
-                        <h2 style="color: black">XVI век</h2>
+                    <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
+                        <h2 style="color: lightgreen">XVI век</h2>
                         <p>Нижний Новгород - пограничный мост России</p>
-                        <a href="centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #51504fd9; color: white">Перейти</a>
+                        <a href="centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
