--- a/centuries/xvi.html
+++ b/centuries/xvi.html
@@ -58,10 +58,11 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">В то время, как в XV веке Нижний Новгород несколько раз был взят ордынцами и татарами, XVI век выдался спокойным для города.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="situation" data-chapter="Положение Нижнего Новгорода в XVI веке">
+                    <p>В сентябре 1505 года под стенами недостроенного кремля было отражено войско ногайцев и казанских татар, состоявшее, в общей сложности, из 60 000 воинов. Предводитель ногайцев был убит пушечным ядром, после чего между ногайцами и татарами произошла резня и хан был вынужден снять осаду.</p>
+                    <p>После похода Василия III на Казань в 1523 году основывается город Василь на реке Суре, к которому переходят пограничные обязанности. После захвата Казани Иваном Грозным пограничная роль Нижнего Новгорода становится незначительной. В 1565 году, после того как царь Иван Грозный разделил Русское царство на опричнину и земщину, город стал земским.</p>
                 </div>
                 <br>
                 <div id="century-navigation">
