--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <img alt="XVI век" src="img/cards/centuries/xvi.jpg" />
                     <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
                         <h2 style="color: lightgreen">XVI век</h2>
-                        <p>Нижний Новгород - пограничный мост России</p>
+                        <p>Нижний Новгород во время правления Ивана Грозного и опричнины</p>
                         <a href="centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
                     </div>
                 </div>
