--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <img alt="XVIII век" src="img/cards/centuries/xviii.jpg" />
                     <div class="mask" style="background-color: rgba(78, 155, 113, 0.69)">
                         <h2 style="color: #7aee90">XVIII век</h2>
-                        <p>Нижний Новгород в эпоху петровских реформ</p>
+                        <p>Нижний Новгород в эпоху петровских реформ и дворцовых переворотов</p>
                         <a href="centuries/xviii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
                     </div>
                 </div>
