Еще одна спутанная карточка

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 </div>
                 <div class="view">
                     <img alt="XVI век" src="img/cards/centuries/xvi.jpg" />
-                    <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
-                        <h2 style="color: lightgreen">XVI век</h2>
+                    <div class="mask" style="background-color: rgba(78, 155, 113, 0.69)">
+                        <h2 style="color: #7aee90">XVI век</h2>
                         <p>Нижний Новгород во время правления Ивана Грозного и опричнины</p>
                         <a href="centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
                     </div>
@@ -101,14 +101,14 @@
                 </div>
                 <div class="view">
                     <img alt="XVIII век" src="img/cards/centuries/xviii.jpg" />
-                    <div class="mask" style="background-color: rgba(78, 155, 113, 0.69)">
-                        <h2 style="color: #7aee90">XVIII век</h2>
+                    <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
+                        <h2 style="color: lightgreen">XVIII век</h2>
                         <p>Нижний Новгород в эпоху петровских реформ и дворцовых переворотов</p>
                         <a href="centuries/xviii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="XIII век" src="img/cards/centuries/xix.jpg" />
+                    <img alt="XIX век" src="img/cards/centuries/xix.jpg" />
                     <div class="mask" style="background-color: rgba(46, 216, 208, 0.75)">
                         <h2 style="color: #d5feff">XIX век</h2>
                         <p>Нижегородская ярмарка и Всероссийская выставка</p>
