XVII век: Смутное время

--- a/centuries/xvii.html
+++ b/centuries/xvii.html
@@ -58,10 +58,16 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">Иван Грозный умирает в 1584 году, оставив после себя сына, Федора I, который станет последним российским самодержцем из династии Рюриковичей. Смерть Федора I дает начало Смутному времени, важную роль в преодолении которого сыграл Нижний Новгород. XVII век в истории России назван "бунташным".</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="militia" data-chapter="Смутное время и Второе ополчение">
+                    <p>К 1611 году Москву наводнили польско-литовские интервенты, польский королевич Владислав имел планы на российский престол. В начале января 1611 года патриарх Гермоген начал рассылать по русским городам грамоты, содержащие призвы собрать ополчение и положить конец оккупации Москвы. Собирается Первое народное ополчение, однако, оно не было успешным.</p>
+                    <p>Вся Россия, как и Москва, находилось в польской оккупации, но в Нижнем Новгороде поляков не было. Осенью 1611 года нижегородский купец Кузьма Минин выступает с речью перед Нижегородским Кремлем и начинает собирать средства для создания Второго народного ополчения. Горожане предложили князю Дмитрию Пожарскому стать военачальником ополчения, и после долгих уговоров он согласился.</p>
+                    <img data-label="Призыв Минина"/>
+                    <p>Ополчение осадило Москвку. Зная, что осаждённые поляки терпят страшный голод, Пожарский в конце сентября 1612 года направил им письмо, в котором предлагал польскому гарнизону сдаться. "Ваши головы и жизнь будут сохранены вам, — писал он, — я возьму это на свою душу и упрошу согласия на это всех ратных людей". На это последовал отказ. Пожарский предлагал осажденным свободный выход со знаменами и оружием, но без награбленных ценностей. Поляки снова ответили отказом. Пожарский с полком встал на Каменном мосту у Троицких ворот Кремля, чтобы встретить боярские семьи и защитить их от казаков. В скором времени поляки сдались и покинули Кремль. Москва была освобождена.</p>
+                    <img data-label="Изгнание поляков из Кремля"/>
+                    <p>В 1818 году в Москве был открыт памятник купцу Кузьме Минину и князю Дмитрию Пожарскому. В 2005 году в Нижнем Новгороде была открыта уменьшенная копия московского памятника. В 2004 году 4 ноября 1612 года было объявлено государственным праздником - Днем народного единства.</p>
+                    <img data-label="Памятник Минину и Пожарскому: в Москве (слева) и в Нижнем Новгороде (справа)"/>
                 </div>
                 <br>
                 <div id="century-navigation">
