XVII век: Церковный раскол

--- a/centuries/xvii.html
+++ b/centuries/xvii.html
@@ -69,6 +69,12 @@
                     <p>В 1818 году в Москве был открыт памятник купцу Кузьме Минину и князю Дмитрию Пожарскому. В 2005 году в Нижнем Новгороде была открыта уменьшенная копия московского памятника. В 2004 году 4 ноября 1612 года было объявлено государственным праздником - Днем народного единства.</p>
                     <img data-label="Памятник Минину и Пожарскому: в Москве (слева) и в Нижнем Новгороде (справа)"/>
                 </div>
+                <div class="chapter" id="church_schism" data-chapter="Церковный раскол">
+                    <p>Церковный раскол был одним из главных событий в России в XVII веке. Уроженец Нижнего Новгорода Никон при поддержке царя Алексея Михайловича становится Патриархом Московским и всея Руси в 1652 году. На Московском соборе 1654 года он, опять же при поддержке царя, принимает решение провести церковную реформу, направленную на внесение изменений в богослужебные книги московской печати и некоторые обряды в целях их унификации с современными греческими.</p>
+                    <img data-label="Московский собор 1654 года"/>
+                    <p>Эти перемены не были понятны народу, что привело к расколу Русской православной церкви на сторонников патриарха, и, собственно, раскольников - старообрядцев (староверов), неформальным главой которых стал протопоп Аввакум - тоже уроженец Нижегородского края. Изначально и Аввакум, и Никон являлись членами небольшого "Кружка ревнителей благочестия", известного своими реформистскими идеями, но после вступления Никона на патриарший престол их пути разошлись.</p>
+                    <p>Староверов преследовали, сажали в тюрьмы, они были вынуждены скрываться на Поморском Севере, в Заволжье, Урале и Сибире. Они устраивали показательные самосожжения и умирали голодной смертью.</p>
+                </div>
                 <br>
                 <div id="century-navigation">
                     <b>Хронология:</b>
